--- a/src/pages/profileView/tabs.scss
+++ b/src/pages/profileView/tabs.scss
@@ -1,69 +1,71 @@
 @import '../../assets/colors/index';
 
 #tabs {
-  margin: 52px 0;
-  padding: 30px 0;
+  margin: 100px 0;
+  padding: 50px;
+  border-radius: 20px;
+  @media (max-width: 768px) {
+    padding: 20px;
+    margin: 50px 0;
+  }
   #tabs-container {
-    display: flex;
-
     #tablist {
-      flex-shrink: 0;
-      width: 200px;
-      padding-right: 20px;
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      font-size: 14px;
-      border-right: 1px solid gray;
+      align-items: center;
+      border-bottom: 1px solid $softGray;
       .tab-title {
-        padding: 4px 30px;
-        border-left: 4px solid transparent;
+        margin-right: 100px;
+        font-size: 22px;
         font-weight: 500;
-        color: $softBlack;
+        color: $gray;
+        @media (max-width: 768px) {
+          margin-right: 40px;
+        }
         cursor: pointer;
+        .bottom-bar {
+          height: 4px;
+          border-radius: 4px;
+        }
         &.active {
-          border-color: $darkBlue;
-          border-radius: 5px;
+          font-size: 24px;
           font-weight: bold;
+          color: $softBlack;
+          .bottom-bar {
+            background-color: $darkBlue;
+          }
         }
       }
     }
     #tab-content {
-      text-align: justify;
-      padding: 0 40px;
-      color: $darkGray;
-      font-weight: 300;
-    }
-  }
-  @media (max-width: 1024px) {
-    #tabs-container {
-      display: block;
-      #tablist {
-        font-size: 12px;
-        flex-direction: row;
-        width: 100%;
-        border: none;
-        margin-bottom: 20px;
-        padding-right: 0;
-        border-bottom: 1px solid $darkBlue;
-        .tab-title {
-          padding: 4px 8px;
-
-          border-left: 0;
-          border-bottom: 0;
-          border-bottom: 2px solid transparent;
-
-          &.active {
-            border-color: $darkBlue;
-            border-radius: 5px;
-            font-weight: bold;
-            border-radius: 0;
+      .content-element {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin-top: 50px;
+        .element-image {
+          width: 100px;
+          @media (max-width: 768px) {
+            width: 80px;
           }
         }
-      }
-      #tab-content {
-        padding: 0;
-        font-size: 12px;
+        h4 {
+          font-size: 18px;
+          font-weight: 600;
+          color: $darkGray;
+          line-height: 20px;
+          margin: 0;
+          @media (max-width: 768px) {
+            font-size: 16px;
+            font-weight: bold;
+          }
+        }
+        .institute {
+          color: $gray;
+        }
+        .during {
+          color: $gray;
+          margin: 0;
+        }
       }
     }
   }
