chat page added

--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -7,6 +7,7 @@ $lightGray: #f2f2f2; //w2
 $lowLightGray: #f8f8f8; //w3
 $white: #ffffff; //w1
 $mediumGray: #f8f8f8; //w3
+$chatBg: #f2f6fc;
 
 $softBlue: #1174a8;
 $darkBlue: #022c42;
