--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -85,6 +85,35 @@
         }
       }
 
+      #chat-progress {
+        font-size: 14px;
+        .chat-top {
+          #me {
+            #avatar {
+              border-radius: 50%;
+              flex-shrink: 0;
+            }
+            strong,
+            span {
+              font-size: 14px;
+            }
+            span {
+              color: $gray;
+            }
+          }
+          #expand-arrow {
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+            background-color: white;
+            box-shadow: 0 0 5px #0005;
+            display: grid;
+            place-items: center;
+            border-radius: 50%;
+          }
+        }
+      }
+
       #inputs-container {
         padding: 40px 24px;
         position: fixed;
