--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -102,6 +102,7 @@
             }
           }
           #expand-arrow {
+            margin-right: -25px;
             cursor: pointer;
             width: 50px;
             height: 50px;
@@ -110,6 +111,17 @@
             display: grid;
             place-items: center;
             border-radius: 50%;
+          }
+        }
+        #questions {
+          border-right: 1px solid $softGray;
+          h5 {
+            color: $green;
+            font-size: 14px;
+          }
+          p {
+            color: $gray;
+            margin-bottom: 30px;
           }
         }
       }
