appointment form added

--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -187,9 +187,8 @@
         }
         #appointment-form {
           color: $darkBlue;
-          .dark-blue-bg {
+          .bg-dark-blue {
             background-color: $darkBlue;
-            color: white;
           }
         }
       }
