payment process and issue component done

--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -152,6 +152,12 @@
         .bg-dark-blue {
           background-color: $darkBlue;
         }
+        .bg-purple {
+          background-color: $purple;
+        }
+        .bg-red {
+          background-color: $red;
+        }
         .text-dark-blue {
           color: $darkBlue;
         }
