--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -30,12 +30,21 @@
         background-color: transparent;
       }
     }
+    @media (max-width: 1024px) {
+      #search {
+        gap: 4px;
+        padding: 10px 8px;
+        input {
+          font-size: 12px;
+        }
+      }
+    }
     //-----small screen-------
     #screen-selectors {
-      @media (min-width: 1024px) {
+      @media (min-width: 1025px) {
         display: none;
       }
-
+      margin-left: 4px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -43,7 +52,7 @@
         font-weight: 600;
         font-size: 12px;
         border-radius: 5px;
-        padding: 8px 16px;
+        padding: 8px;
         cursor: pointer;
       }
       #chat-list {
@@ -59,7 +68,7 @@
       #user-profile {
         display: flex;
         align-items: center;
-        gap: 8px;
+        gap: 4px;
         img {
           width: 32px;
           height: 32px;
@@ -77,7 +86,6 @@
       & > div.selected-screen {
         position: absolute !important;
         width: 100vw !important;
-        // top: 0;
         left: 0;
         right: 0;
         z-index: 99999;
@@ -111,7 +119,7 @@
       flex: 1;
       z-index: 1;
       background-color: $chatBg;
-      padding: 32px 20px;
+      padding: 32px 0px;
       position: relative;
       height: calc(100vh - 135px);
       overflow-y: auto;
@@ -149,6 +157,9 @@
       #chat-progress {
         font-size: 14px;
 
+        .bg-green {
+          background-color: $green;
+        }
         .bg-dark-blue {
           background-color: $darkBlue;
         }
@@ -160,6 +171,9 @@
         }
         .text-dark-blue {
           color: $darkBlue;
+        }
+        em {
+          color: $gray;
         }
         .chat-top {
           #me {
@@ -232,7 +246,7 @@
       }
 
       #inputs-container {
-        padding: 40px 24px;
+        padding: 32px 24px;
         position: fixed;
         bottom: 0;
         left: 360px;
@@ -255,17 +269,30 @@
             border: none;
             outline: none;
             background-color: transparent;
+            @media (max-width: 1024px) {
+              padding-inline: 8px;
+            }
           }
           .send-btn {
             background-color: $darkBlue;
             padding: 12px;
             border-radius: 8px;
+            @media (max-width: 1024px) {
+              padding: 4px;
+            }
           }
         }
         .send-icons {
           border: 1px solid #c0c0c0;
           padding: 12px;
           border-radius: 10px;
+          @media (max-width: 1024px) {
+            padding: 4px;
+          }
+        }
+        @media (max-width: 1024px) {
+          padding: 16px;
+          gap: 4px;
         }
       }
     }
@@ -296,7 +323,7 @@
         display: grid;
         place-items: center;
         cursor: pointer;
-        background-color: white;
+        background-color: $softBlue;
         box-shadow: 0 0 5px #0003;
         border-radius: 50%;
         margin-bottom: 20px;
