--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -190,15 +190,18 @@
             }
           }
           #expand-arrow {
-            margin-right: -25px;
+            margin-right: -20px;
             cursor: pointer;
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             background-color: white;
             box-shadow: 0 0 5px #0005;
             display: grid;
             place-items: center;
             border-radius: 50%;
+            img {
+              width: 16px;
+            }
           }
         }
         #questions {
