Consultants offer components added

--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -172,6 +172,12 @@
         .text-dark-blue {
           color: $darkBlue;
         }
+        .text-green {
+          color: $green;
+        }
+        .text-red {
+          color: $red;
+        }
         em {
           color: $gray;
         }
