--- a/src/pages/chats/index.scss
+++ b/src/pages/chats/index.scss
@@ -52,13 +52,18 @@
         font-weight: 600;
         font-size: 12px;
         border-radius: 5px;
-        padding: 8px;
+        padding-inline: 8px;
         cursor: pointer;
       }
       #chat-list {
+        width: 40px;
+        height: 40px;
+        display: grid;
+        place-items: center;
         background-color: $darkBlue;
         color: white;
-        box-shadow: 0 0 5px #0003;
+        border-radius: 50%;
+        box-shadow: inset 0 0 5px #0003;
         transition: box-shadow 0.2s ease-out;
 
         &:hover {
@@ -70,8 +75,8 @@
         align-items: center;
         gap: 4px;
         img {
-          width: 32px;
-          height: 32px;
+          width: 40px;
+          height: 40px;
           object-fit: cover;
           border-radius: 50%;
         }
